[221025]status 스케쥴러
